[package]
name = "kirinos_bot_notifications"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smol = "1.2"
twitchchat = { version = "0.14", features = ["smol", "async"] }
anyhow = "1.0"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
simple_logger = { version = "1.11.0", default-features = false, features = ["colored"] }
rand = "0.7.3"
